# segfblla

./: setup.cfg
contrib/: cbad19_train.sh
segfblla/: cli.py  dataset.py  default_specs.py  losses.py  model.py  pred.py  tiles.py  train.py
segfblla/cli/: __init__.py  pred.py  train.py
